# rust-practice

./: .gitignore  Cargo.toml  README.md
src/: main  main.rs
src/practice/: lib.rs  main  main.rs
src/practice/src/: config.rs  mod.rs
src/practice10/trait_practice/: Cargo.toml
src/practice10/trait_practice/src/: main.rs
src/practice11/aaa/: Cargo.toml
src/practice11/aaa/src/: main.rs
src/practice12/practice_hash/: Cargo.toml
src/practice12/practice_hash/src/: main.rs
src/practice12/practice_vector/: Cargo.toml
src/practice12/practice_vector/src/: main.rs
src/practice13/practice_enum/: Cargo.toml
src/practice13/practice_enum/src/: main.rs
src/practice14/practice_error_handle/: Cargo.toml
src/practice14/practice_error_handle/src/: main.rs  test.txt
src/practice15/practice_asynchronous/: Cargo.toml
src/practice16/practice_smart_pointer/: Cargo.toml
src/practice17/practice_tokio/: Cargo.toml
src/practice18/practice_web/practice_web/: Cargo.toml
src/practice18/practice_web/practice_web/src/: main.rs
src/practice18/practice_web/practice_web/src/models/: json.rs  mod.rs  user_model.rs
src/practice18/practice_web/practice_web/src/util/: init_db.rs  mod.rs  test.rs
src/practice19/practice_trait/: Cargo.toml
src/practice2/: main  main.rs
src/practice21/practice_unit_test/: Cargo.toml
src/practice22/practice_ctl/: Cargo.toml
src/practice22/practice_ctl/src/: main.rs
src/practice3/: main  main.rs
src/practice4/: main  main.rs
src/practice5/: main  main.rs
src/practice7/: main  main.rs
src/practice8/: main  main.rs  user.rs
(+20 files in other folders)
