[package]
name = "practice_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"

#[dependencies.rocket_contrib]
#version = "0.4.10"
#default-features = false
#features = ["json"]


